--- a/src/pages/profile/ui/Sidebar/MenuList/MenuList.css
+++ b/src/pages/profile/ui/Sidebar/MenuList/MenuList.css
@@ -10,6 +10,7 @@
   gap: 10px;
   background-color: transparent;
   border: none;
+  text-decoration: none;
   padding: 16px;
   border-radius: 12px;
   color: #fff;
